# Book_Recomendation_System

./: .gitignore  BRS - WebScrapping-API.ipynb  Book_Recommendation_System_Charles.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: BRS - WebScrapping-API-checkpoint.ipynb  README-checkpoint.md
API/: books_api_scraped.csv
Slides/: Presentation
Streamlit/: App
data/clean/: books_merged_clean.csv
data/raw/: BRS_Web-Scrapping.csv  award_books_cleaned.csv  award_books_cleaned_final.csv  award_books_combined.csv  award_books_enhanced.csv  books_api_scraped_no_null.csv  web_scrapping_no_null.csv
data/raw/Web_Scraping_Batches/: batch_01_05.csv  batch_06_10.csv  batch_11_15.csv  batch_16_20.csv  batch_21_25.csv
notebooks/: BRS - Base_Antonio.ipynb  BRS - TFIDF_Antonio.ipynb  BRS_WS_Cleaning.ipynb  BRS_Web-Scrapping.ipynb  SBERT.ipynb  datasets_merging.ipynb  tfidf_implementation.py
notebooks/APP_v1/: app_bookommender.py  concept.txt  requirements.txt
notebooks/Backups/APP_v0/: book_embeddings.npy  books_with_content.csv
notebooks/Backups/APP_v0_alternative/: Streamlit.ipynb  app_v0.py
notebooks/Backups/APP_v0_alternative2/: README.md  SETUP.md  app.py
notebooks/Backups/APP_v0_alternative3/: app_engine.py  concept.txt  streamlit_app.py
notebooks/Backups/APP_v1_alternative1/: app.py  app_ghazal.py  book_embeddings.npy  books_with_content.csv
