[project]
name = "fp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.1",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
]
